I;ve added the DOM manipulation by refactoring the existing code

--- a/Rock Paper Scissors Console/index.html
+++ b/Rock Paper Scissors Console/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <div class="btn">
+        <button id="1">Rock</button>
+        <button id="2">Paper</button>
+        <button id="3">Scissor</button>
+    </div>
+
+    <div class="Results">
+        <h1 id="user">Your Score: 0</h1>
+        <h1 id="comp">Computer's Score: 0</h1>
+        <h1 id="winner">Winner: </h1>
+    </div>
+
+
 
 </body>
 
