--- a/Rock Paper Scissors/index.html
+++ b/Rock Paper Scissors/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="index.js" ref></script>
+    <script type="module" src="index.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 
