Finished The Layout with proper styling

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,7 +10,50 @@
 </head>
 
 <body>
+    <div class="Container">
+        <div class="main">
+            <div class="flexverContainer">
+
+                <div class="screen">
+                    <span>0</span>
+                </div>
+
+                <div class="btnContainer">
+                    <div class="btn" id="one">Clear</div>
+                    <div class="btn" id="two">Delete</div>
+                </div>
+
+                <div class="padsContainer">
+                    <button class="btn" onclick="this.blur();">7</button>
+                    <button class="btn" onclick="this.blur();">8</button>
+                    <button class="btn" onclick="this.blur();">9</button>
+                    <button class="btn" onclick="this.blur();">÷</button>
+
+                    <button class="btn" onclick="this.blur();">4</button>
+                    <button class="btn" onclick="this.blur();">5</button>
+                    <button class="btn" onclick="this.blur();" data-number>6</button>
+                    <button class="btn" onclick="this.blur();">×</button>
+
+                    <button class="btn" onclick="this.blur();" data-number>1</button>
+                    <button class="btn" onclick="this.blur();" data-number>2</button>
+                    <button class="btn" onclick="this.blur();" data-number>3</button>
+                    <button class="btn" onclick="this.blur();">−</button>
+
+                    <button class="btn" onclick="this.blur();" id="pointBtn">.</button>
+                    <button class="btn" onclick="this.blur();" data-number>0</button>
+                    <button class="btn" onclick="this.blur();" id="equalsBtn">=</button>
+                    <button class="btn" onclick="this.blur();">+</button>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+
 
 </body>
+
 
 </html>
