i've added the code that handles all operations in the Calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -19,8 +19,8 @@
                 </div>
 
                 <div class="btnContainer">
-                    <div class="btn" id="one">Clear</div>
-                    <div class="btn" id="two">Delete</div>
+                    <button class="btn" id="one">Clear</button>
+                    <button class="btn" id="two">Delete</button>
                 </div>
 
                 <div class="padsContainer">
