--- a/Sign-up-Form/index.html
+++ b/Sign-up-Form/index.html
@@ -13,6 +13,10 @@
     <div class="container">
 
         <div class="left">
+            <div class="overlay">
+                <img src="./img/odin-lined.png" alt="" srcset="" width="120px" height="130px">
+                <p>ODIN</p>
+            </div>
             <img src="./img/halie-west-25xggax4bSA-unsplash.jpg" alt="" srcset="" width="100%" height="100%">
         </div>
 
@@ -84,6 +88,14 @@
 
             </div>
             <div class="footer">
+                <div class="btn">
+                    <button type="submit">
+                        Create Account
+                    </button>
+                </div>
+                <div class="footinfo">
+                    <span>Already have an account?</span> <a href="http://">Log in</a>
+                </div>
 
             </div>
         </div>
