--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -2,17 +2,182 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>HomePage</title>
+    <title>My Portfolio</title>
+    <style>
+
+    </style>
 </head>
 
 <body>
 
-    <Header></Header>
-    <main></main>
-    <footer></footer>
+    <div class="Container-header">
+        <!-- Hero / Header -->
+        <header class="hero">
+            <div class="hero-content">
+                <h1>Munir Ali</h1>
+            </div>
+        </header>
+
+        <!-- About Me -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                Hello! I'm a passionate web developer who loves creating clean, efficient, and user-friendly websites.
+                I enjoy working with HTML, CSS, and JavaScript, and I'm always eager to learn new technologies.
+            </p>
+        </section>
+    </div>
+
+
+    <!-- My Work -->
+    <div class="work">
+        <h2>My Work</h2>
+    </div>
+
+    <section id="work">
+
+
+        <!-- Project Card 1 -->
+        <div class="project-card">
+            <div class="image">
+                <img src="./Images/3219080.jpg" alt="Project image">
+            </div>
+            <div class="project-header">
+
+                <h3>Project One</h3>
+                <div class="icon-links">
+                    <a href="#" aria-label="GitHub Link" target="_blank">
+                        <img src="./Images/github.svg" alt="GitHub" />
+                    </a>
+                    <a href="#" aria-label="Open Project" target="_blank">
+                        <img src="./Images/arrow-expand-all.svg" alt="Open Project" />
+                    </a>
+                </div>
+            </div>
+            <p>Short description of the project. Just a couple of sentences will do.</p>
+
+        </div>
+
+        <!-- Project Card 2 -->
+        <div class="project-card">
+            <div class="image">
+                <img src="./Images/3219080.jpg" alt="Project image">
+            </div>
+            <div class="project-header">
+                <h3>Project Two</h3>
+                <div class="icon-links">
+                    <a href="#" aria-label="GitHub Link" target="_blank">
+                        <img src="./Images/github.svg" alt="GitHub" />
+                    </a>
+                    <a href="#" aria-label="Open Project" target="_blank">
+                        <img src="./Images/arrow-expand-all.svg" alt="Open Project" />
+                    </a>
+                </div>
+            </div>
+            <p>Short description of the project. Just a couple of sentences will do.</p>
+        </div>
+
+        <div class="project-card">
+            <div class="image">
+                <img src="./Images/3219080.jpg" alt="Project image">
+            </div>
+            <div class="project-header">
+                <h3>Project Two</h3>
+                <div class="icon-links">
+                    <a href="#" aria-label="GitHub Link" target="_blank">
+                        <img src="./Images/github.svg" alt="GitHub" />
+                    </a>
+                    <a href="#" aria-label="Open Project" target="_blank">
+                        <img src="./Images/arrow-expand-all.svg" alt="Open Project" />
+                    </a>
+                </div>
+            </div>
+            <p>Short description of the project. Just a couple of sentences will do.</p>
+        </div>
+        <div class="project-card">
+            <div class="image">
+                <img src="./Images/3219080.jpg" alt="Project image">
+            </div>
+            <div class="project-header">
+                <h3>Project Two</h3>
+                <div class="icon-links">
+                    <a href="#" aria-label="GitHub Link" target="_blank">
+                        <img src="./Images/github.svg" alt="GitHub" />
+                    </a>
+                    <a href="#" aria-label="Open Project" target="_blank">
+                        <img src="./Images/arrow-expand-all.svg" alt="Open Project" />
+                    </a>
+                </div>
+            </div>
+            <p>Short description of the project. Just a couple of sentences will do.</p>
+        </div>
+        <div class="project-card">
+            <div class="image">
+                <img src="./Images/3219080.jpg" alt="Project image">
+            </div>
+            <div class="project-header">
+                <h3>Project Two</h3>
+                <div class="icon-links">
+                    <a href="#" aria-label="GitHub Link" target="_blank">
+                        <img src="./Images/github.svg" alt="GitHub" />
+                    </a>
+                    <a href="#" aria-label="Open Project" target="_blank">
+                        <img src="./Images/arrow-expand-all.svg" alt="Open Project" />
+                    </a>
+                </div>
+            </div>
+            <p>Short description of the project. Just a couple of sentences will do.</p>
+        </div>
+        <div class="project-card">
+            <div class="image">
+                <img src="./Images/3219080.jpg" alt="Project image">
+            </div>
+            <div class="project-header">
+                <h3>Project Two</h3>
+                <div class="icon-links">
+                    <a href="#" aria-label="GitHub Link" target="_blank">
+                        <img src="./Images/github.svg" alt="GitHub" />
+                    </a>
+                    <a href="#" aria-label="Open Project" target="_blank">
+                        <img src="./Images/arrow-expand-all.svg" alt="Open Project" />
+                    </a>
+                </div>
+            </div>
+            <p>Short description of the project. Just a couple of sentences will do.</p>
+        </div>
+        <!-- Add more project-cards as needed -->
+    </section>
+
+    <!-- Contact / Socials -->
+    <section id="contact">
+        <div class="left">
+            <h2>Get in Touch</h2>
+            <p>
+                Feel free to reach out if you'd like to work together or have any questions about my projects.
+            </p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, in suscipit! Ex consectetur aperiam
+                voluptas consequuntur nihil accusamus repellat. Reiciendis, ducimus neque labore quisquam itaque nam
+                corporis sequi nobis minus est eius dicta amet fugiat rerum debitis? Odit eius provident atque,
+                reiciendis vitae illo velit minima repellat a ipsum repudiandae distinctio dicta ipsam maxime quibusdam
+                sunt ea animi quae numquam quas quo eos sit natus! Illum ullam obcaecati magni laboriosam reprehenderit
+                accusamus tenetur quas molestias tempore necessitatibus ipsam, id incidunt architecto eum unde
+                voluptatibus corporis nihil saepe! Nobis suscipit numquam soluta, reprehenderit minus blanditiis non
+                optio eum eius commodi quasi!</p>
+            <div class="socials">
+                <a href="#" target="_blank">LinkedIn</a>
+                <a href="#" target="_blank">GitHub</a>
+                <a href="#" target="_blank">Twitter</a>
+            </div>
+        </div>
+        <div class="right">
+            <img src="./Images/pexels-1032268979-27048758.jpg" alt="">
+        </div>
+
+    </section>
 
 </body>
 
